--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -10,7 +10,7 @@
         <li><a href="/servlet/members/new-form">회원가입</a></li> <li><a href="/servlet/members">회원목록</a></li>
     </ul> </li>
     <li>JSP <ul>
-        <li><a href="/jsp/members/new-form.jsp">회원가입</a></li> </ul>
+        <li><a href="/jsp/new-form.jsp">회원가입</a></li> </ul>
         <li><a href="/jsp/members.jsp">회원목록</a></li> </ul>
     </li> <li>서블릿 MVC
     <ul>
@@ -20,6 +20,7 @@
         <ul>
             <li><a href="/front-controller/v1/members/new-form">회원가입</a></li>
             <li><a href="/front-controller/v1/members">회원목록</a></li> </ul>
+    <li><a href="/jsp/members/new-form.jsp">회원가입</a></li>
     </li>
     <li>FrontController - v2
         <ul>
@@ -36,7 +37,7 @@
         </ul> </li>
     <li>FrontController - v5 - v3
         <ul>
-            <li><a href="/front-controller/v5/v3/members/new-form">회원가입</a></
+            <li><a href="/front-controller/v5/v3/members/new-form">회원가입</a>
             li>
             li>
         </ul> </li>
@@ -47,7 +48,7 @@
     </li>
     <li>FrontController - v5 - v4
         <ul>
-            <li><a href="/front-controller/v5/v4/members/new-form">회원가입</a></
+            <li><a href="/front-controller/v5/v4/members/new-form">회원가입</a>
             <li><a href="/front-controller/v5/v4/members">회원목록</a></li> </ul>
     </li>
     <li>SpringMVC - v1
